--- a/src/New/New.css
+++ b/src/New/New.css
@@ -45,6 +45,12 @@
     height: 82vh;
 }
 
+@media (max-width: 1400px) {
+    .body_new {
+        height: 150vh;
+    }
+}
+
 @media (max-width: 1100px) {
     .even-columns {
         gap: 20em;
